// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo secretstore delete "frodo secretstore delete --all": should fail deleting any secret store 1`] = `
"Error getting tokens
  Service account login error
    Unsupported deployment type: 'cloud' not in classic
Unrecognized combination of options or no options...
"
`;

exports[`frodo secretstore delete "frodo secretstore delete --all": should fail deleting any secret store 2`] = `1`;

exports[`frodo secretstore delete "frodo secretstore delete --global -i default-keystore --type classic": should delete the global default keystore 1`] = `""`;

exports[`frodo secretstore delete "frodo secretstore delete --global -i default-keystore --type classic": should delete the global default keystore 2`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
- Deleting default-keystore...
✔ Deleted default-keystore.
"
`;

exports[`frodo secretstore delete "frodo secretstore delete -agm classic": should delete all global keystores with exception of EnvironmentAndSystemPropertySecretStore 1`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
- Deleting secret stores...
Error deleting the / realm secret store EnvironmentAndSystemPropertySecretStore
  Network error:
    URL: http://openam-frodo-dev.classic.com:8080/am/json/global-config/secrets/stores/EnvironmentAndSystemPropertySecretStore/
    Status: 400
    Code: ERR_BAD_REQUEST
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
✔ Deleted all secret stores.
"
`;

exports[`frodo secretstore delete "frodo secretstore delete -agm classic": should delete all global keystores with exception of EnvironmentAndSystemPropertySecretStore 2`] = `1`;

exports[`frodo secretstore delete "frodo secretstore delete -g --secretstore-id EnvironmentAndSystemPropertySecretStore --secretstore-type EnvironmentAndSystemPropertySecretStore -m classic": should fail deleting EnvironmentAndSystemPropertySecretStore 1`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
- Deleting EnvironmentAndSystemPropertySecretStore...
✖ Error: Error deleting the / realm secret store EnvironmentAndSystemPropertySecretStore
Error deleting the / realm secret store EnvironmentAndSystemPropertySecretStore
  Network error:
    URL: http://openam-frodo-dev.classic.com:8080/am/json/global-config/secrets/stores/EnvironmentAndSystemPropertySecretStore/
    Status: 400
    Code: ERR_BAD_REQUEST
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
"
`;

exports[`frodo secretstore delete "frodo secretstore delete -g --secretstore-id EnvironmentAndSystemPropertySecretStore --secretstore-type EnvironmentAndSystemPropertySecretStore -m classic": should fail deleting EnvironmentAndSystemPropertySecretStore 2`] = `1`;

exports[`frodo secretstore delete "frodo secretstore delete -i ESV": should fail deleting ESV secret store 1`] = `
"Error getting tokens
  Service account login error
    Unsupported deployment type: 'cloud' not in classic
Unrecognized combination of options or no options...
"
`;

exports[`frodo secretstore delete "frodo secretstore delete -i ESV": should fail deleting ESV secret store 2`] = `1`;
